Tc/fix/transitions light to dark mode pc sheet (#184)
* fix: transitions between light and dark mode on pc sheet
* fix: tooltip descriptions on character creation
* fix: secondary navigation visible on light and dark mode for spells

--- a/src/scss/components/_ability-score.scss
+++ b/src/scss/components/_ability-score.scss
@@ -11,6 +11,7 @@
   margin: 0 0 0.125rem;
   padding: 0;
   line-height: 1;
+  color: var(--nimble-dark-text-color);
   background: transparent;
   border: 0;
   border-radius: 0;
