--- a/src/scss/components/_skill.scss
+++ b/src/scss/components/_skill.scss
@@ -8,6 +8,7 @@
   padding-inline: var(--nimble-skill-padding-inline-start, 0) var(--nimble-skill-padding-inline-end, 0.5rem);
   padding-block: var(--nimble-skill-padding-block-start, 0) var(--nimble-skill-padding-block-end, 0);
   line-height: 1;
+  color: var(--nimble-dark-text-color);
   background: transparent;
   border: 0;
   border-radius: 0;
